Revision history for Perl extension HTTP::Proxy

0.11  
        - setting maxchild to 0 prevents forking (Jim Cromie)
        - filters can now match on the query string
        - hop-by-hop headers and Max-Forwards headers correctly supported
        - new mutators added to HTTP::Proxy: via, hop_headers, request,
          response
        - new examples scripts: proxy-auth.pl

0.10  Wed Nov 19 01:36:59 CET 2003

        *** MAJOR INTERFACE CHANGES ***

        - new base classes HTTP::Proxy::HeaderFilter and
          HTTP::Proxy::BodyFilter
        - some useful built-in filter classes:
          HTTP::Proxy::BodyFilter::htmlparser
          HTTP::Proxy::BodyFilter::htmltext
          HTTP::Proxy::BodyFilter::lines
          HTTP::Proxy::BodyFilter::simple
          HTTP::Proxy::BodyFilter::tags
          HTTP::Proxy::HeaderFilter::simple
          HTTP::Proxy::HeaderFilter::standard
        - tests for the internal class HTTP::Proxy::FilterStack
        - tests for the built-in filters
        - the examples are up-to-date with the new interface 
        - new/enhanced accessors:
          + the proxy host() attribute becomes actually useful: by default,
            the proxy is only usable by local user-agents (the socket
            is bound to localhost)
          + the filters proxy() accessor gives access to the proxy itself.
            For example, one can get the IP address of the agent connected
            to the proxy from inside a filter ($self->proxy->daemon->peerhost)
        - many documentation changes

        This version is NOT compatible with the previous ones
        regarding the way filters work.

        *** MAJOR INTERFACE CHANGES ***

0.09  Fri Aug 15 21:12:17 CEST 2003
        - maxserve is now correctly handled
        - corrected a bug in the t/20keepalive.t test file that
          made the tests fail on some machines

0.08  Thu Mar 13 01:41:42 CET 2003
        - cleaned up support for filters