@@ -1,12 +1,15 @@
 Revision history for Perl extension HTTP::Proxy
 
 0.11  
+        [FEATURES]
         - setting maxchild to 0 prevents forking (Jim Cromie)
         - filters can now match on the query string
         - hop-by-hop headers and Max-Forwards headers correctly supported
         - new mutators added to HTTP::Proxy: via, hop_headers, request,
           response
         - new examples scripts: proxy-auth.pl
+        [PATCHES]
+        - push_filter now correctly supports several match criteria
 
 0.10  Wed Nov 19 01:36:59 CET 2003
 
